--- a/intex.html
+++ b/intex.html
@@ -1,4 +1,7 @@
 <h1>Hola Mundo desde GIT hacia GitHub <h1>
-
+<body>
 	<h3>a ver como sale esto</h3>
 
+	nombre: <input type="text" name="nombre" size="10"><br>
+</body>
+	
